[tool.poetry]
name = "xs2a-secure-api"
version = "0.1.0"
description = ""
authors = ["Aleksa Lukic <aleksalukic92@web.de>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["full"], version = "^0.111.0"}
sqlalchemy = "^2.0.31"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = {extras = ["postgres"], version = "^1.13.2"}
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.32.3"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
